--- a/src/main/resources/templates/layout/main_layout.html
+++ b/src/main/resources/templates/layout/main_layout.html
@@ -6,7 +6,9 @@
     <title>Phone store</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main_style.css" type="text/css">
+    <link rel="stylesheet" href="/css/main_style.css" type="text/css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="/jscript/main-jscript.js" th:src="@{/jscript/main-jscript.js}"></script>
 </head>
 
 <body>
@@ -15,19 +17,51 @@
             <div>
                 <nav class="menu">
                     <ul>
-                        <li id="nav-1-home" class="nav-home"><a href="/index">home</a></li>
+                        <li id="nav-1-home" class="nav-home">
+                            <a href="#home">
+                                <span class="fas fa-home"></span>
+                                <span>home</span>
+                            </a>
+                        </li>
                         <div class="dropdown-product">
-                            <li id="nav-2-product" class="nav-product"><a href="/phone">Product</a></li>
+                            <li id="nav-2-product" class="nav-product">
+                                <a href="/admin/phone">
+                                    <span class="fas fa-mobile-alt"></span>
+                                    <span>Product</span>
+                                </a>
+                            </li>
                             <div class="dropdown-nav-product">
-                                <a href="/phone">Phone</a>
-                                <a href="/brand">Brand</a>
-                                <a href="/color">Color</a>
-                                <a href="#Phone">Order</a>
+                                <a href="/admin/phone">
+                                    <span class="fas fa-mobile-alt"></span>
+                                    <span>Phone</span>
+                                </a>
+                                <a href="/admin/brand">
+                                    <span class="fas fa-palette"></span>
+                                    <span>color</span>
+                                </a>
+                                <a href="/admin/color">
+                                    <span class="fas fa-copyright"></span>
+                                    <span>Brand</span>
+                                </a>
                             </div>
                         </div>
-                        <li id="nav-3-staff" class="nav-staff"><a href="#Staff">Staff</a></li>
-                        <li id="nav-4-customer" class="nav-customer"><a href="#Customer">Customer</a></li>
-                        <li id="nav-5-logout" class="nav-logout"><a href="#logout">Logout</a></li>
+                        <li id="nav-3-staff" class="nav-staff">
+                            <a href="/form-addphone.html">
+                                <span class="fas fa-user-tag"></span>
+                                <span>Staff</span>
+                            </a>
+                        </li>
+                        <li id="nav-4-customer" class="nav-customer">
+                            <a href="#Customer">
+                                <span class="fas fa-users"></span>
+                                <span>Customer</span>
+                            </a>
+                        </li>
+                        <li id="nav-5-logout" class="nav-logout">
+                            <a href="#logout">
+                                <span class="fa fa-sign-out-alt"></span>
+                                <span>Sign-out</span></a>
+                        </li>
                     </ul>
                 </nav>
             </div>
@@ -41,9 +75,7 @@
             <p class="footer-email">Email: thangbaophonestore@gmail.com</p>
             <p class="footer-phonenum">Phone Number: 0909603151</p>
         </footer>
-
     </div>
-
 
 </body>
 
