--- a/src/main/resources/templates/product/color.html
+++ b/src/main/resources/templates/product/color.html
@@ -3,7 +3,7 @@
       layout:decorator="~{layout/main_layout}">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="css/brand-color-style.css">
+    <link rel="stylesheet" type="text/css" href="/css/brand-color-style.css">
 </head>
 <body>
 <div layout:fragment="content">
@@ -61,7 +61,7 @@
                     </tr>
                 </table>
                 <div class="vertical-center">
-                    <button type="submit" class="btn-add">ADD</button>
+                    <button type="submit" class="btn-add">SUBMIT</button>
                 </div>
             </form>
         </div>
