--- a/src/main/resources/templates/product/phone.html
+++ b/src/main/resources/templates/product/phone.html
@@ -4,7 +4,7 @@
       layout:decorator="~{layout/main_layout}">
 <head>
     <meta charset="UTF-8">
-    <link href="css/phone-style.css" type="text/css" rel="stylesheet">
+    <link href="/css/phone-style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 <div layout:fragment="content">
@@ -16,7 +16,7 @@
                     <table>
                         <tr>
                             <td class="td-search-phone"><input type="text" class="text-search"></td>
-                            <td><a class="btn btn-primary btn-sm mb-3" id="btn-add-phone" href="/uploadPhone">Add</a></td>
+                            <td><a class="btn btn-primary btn-sm mb-3" id="btn-add-phone" href="/admin/uploadPhone">Add</a></td>
                         </tr>
                     </table>
                 </td>
@@ -46,11 +46,13 @@
                                 </td>
                                 <td class="td-phone-brand" th:text="${tempPhone.brand}"/>
                                 <td class="td-phone-color" th:text="${tempPhone.color}"/>
-                                <td class="td-phone-price"><span th:text="${#numbers.formatDecimal(tempPhone.price, 0, 'COMMA', 0, 'POINT')}"></span>VNĐ</td>
+                                <td class="td-phone-price">
+                                    <span th:text="${#numbers.formatDecimal(tempPhone.price, 0, 'COMMA', 0, 'POINT')}">
+                                    </span>VNĐ</td>
                                 <td class="td-phone-quantity" th:text="${tempPhone.quantity}"/>
                                 <td class="td-phone-description" th:text="${tempPhone.description}"/>
                                 <td class="td-phone-action">
-                                    <a class="btn btn-primary btn-sm mb-3">Update</a>
+                                    <a class="btn btn-primary btn-sm mb-3" th:href="@{/admin/updatePhone(idPhone=${tempPhone.id})}">Update</a>
                                     <a href="#" class="btn btn-danger btn-sm mb-3">Delete</a>
                                 </td>
                             </tr>
