--- a/src/main/resources/templates/layout/main_layout.html
+++ b/src/main/resources/templates/layout/main_layout.html
@@ -37,16 +37,16 @@
                                 </a>
                                 <a href="/admin/brand">
                                     <span class="fas fa-palette"></span>
-                                    <span>color</span>
+                                    <span>Brand</span>
                                 </a>
                                 <a href="/admin/color">
                                     <span class="fas fa-copyright"></span>
-                                    <span>Brand</span>
+                                    <span>Color</span>
                                 </a>
                             </div>
                         </div>
                         <li id="nav-3-staff" class="nav-staff">
-                            <a href="/form-addphone.html">
+                            <a href="/admin/staff">
                                 <span class="fas fa-user-tag"></span>
                                 <span>Staff</span>
                             </a>
