--- a/src/main/resources/templates/product/color.html
+++ b/src/main/resources/templates/product/color.html
@@ -47,23 +47,25 @@
             </table>
         </div>
         <div class="content-update">
-            <form action="/color" class="form-add-brand">
-                <table class="style-add-brand">
-                    <tr>
-                        <td>
-                            <div class="phone-container">
-                                <p>
-                                    <label><b>Color</b></label>
-                                    <input class="input-text-phone-style" type="text">
-                                </p>
-                            </div>
-                        </td>
-                    </tr>
-                </table>
-                <div class="vertical-center">
-                    <button type="submit" class="btn-add">SUBMIT</button>
-                </div>
-            </form>
+            <div class="brand-container">
+                <form action="/color" class="form-add-brand">
+                    <table class="style-add-brand">
+                        <tr>
+                            <td>
+                                <div class="phone-container">
+                                    <p>
+                                        <label><b>Color</b></label>
+                                        <input class="input-text-phone-style" type="text">
+                                    </p>
+                                </div>
+                            </td>
+                        </tr>
+                    </table>
+                    <div class="vertical-center">
+                        <button type="submit" class="btn-add">SUBMIT</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 </div>
